--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
     "no-unused-expressions": "error",
     "prefer-const": "error",
     "no-console": "warn",
-    "no-undef": "error"
+    "no-undef": "error",
+    "@typescript-eslint/no-unused-expressions": "off",
+    "no-require-imports": "off"
   },
   "globals": {
     "process": "readonly"
