--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,9 +19,7 @@
     "no-unused-expressions": "error",
     "prefer-const": "error",
     "no-console": "warn",
-    "no-undef": "error",
-    "@typescript-eslint/no-unused-expressions": "off",
-    "no-require-imports": "off"
+    "no-undef": "error"
   },
   "globals": {
     "process": "readonly"
