--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status": "^1.7.4",
     "joi": "^17.13.3",
     "mongoose": "^8.5.4",
     "validator": "^13.12.0",
